--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jcubic/wayne",
-  "version": "0.4.0",
-  "description": "Service Worker Routing",
+  "version": "0.5.0",
+  "description": "Service Worker Routing for in browser HTTP requests",
   "type": "module",
   "main": "index.min.js",
   "scripts": {},
