--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jcubic/wayne",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Service Worker Routing for in browser HTTP requests",
   "type": "module",
   "main": "index.min.js",
@@ -9,11 +9,21 @@
     "service-worker",
     "server",
     "http",
+    "https",
+    "http-server",
     "fake",
     "mock",
     "artifical",
+    "download",
+    "hijack",
+    "router",
+    "filesystem",
+    "routing",
+    "http-interceptor",
     "http-server",
     "request",
+    "proxy",
+    "sse",
     "server-sent-events"
   ],
   "author": "Jakub T. Jankiewicz <jcubic@onet.pl> (https://jcubic.pl/me/)",
